--- a/admin-stat-output.html
+++ b/admin-stat-output.html
@@ -40,19 +40,19 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #E21833;">
     <div class="container">
-      <a class="navbar-brand" href="../guest-homepage-view/index.html">UMD Club Rugby</a>
+      <a class="navbar-brand" href="index.html">UMD Club Rugby</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../admin-registration-view-input/admin-reg-input.html">Registration</a></li>
-          <li class="nav-item"><a class="nav-link" href="../rugbymerchviews/rugby-merch.html">Merchandise</a></li>
-          <li class="nav-item"><a class="nav-link" href="../guest-schedule-view/guest-schedule.html">Statistics</a></li>
+          <li class="nav-item"><a class="nav-link" href="admin-reg-input.html">Registration</a></li>
+          <li class="nav-item"><a class="nav-link" href="rugby-merch.html">Merchandise</a></li>
+          <li class="nav-item"><a class="nav-link" href="guest-schedule.html">Statistics</a></li>
         </ul>
       </div>
       <span class="text-white ms-3">Welcome Admin</span>
-      <a href="../guest-homepage-view/index.html" class="btn btn-outline-light ms-2">Sign Out</a>
+      <a href="index.html" class="btn btn-outline-light ms-2">Sign Out</a>
     </div>
   </nav>
 
@@ -159,7 +159,7 @@
       </div>
     </div>
     <div class="text-end">
-      <button class="btn btn-danger px-4" onclick="window.location.href='../admin-statistics-view-input/admin-stat-input.html'">Edit</button>
+      <button class="btn btn-danger px-4" onclick="window.location.href='admin-stat-input.html'">Edit</button>
     </div>
   </div>
 
