--- a/approve.html
+++ b/approve.html
@@ -67,13 +67,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../Registration-Home/registration-home.html">Registration</a></li>
-          <li class="nav-item"><a class="nav-link" href="../rugbymerchviews/rugby-merch.html">Merchandise</a></li>
-          <li class="nav-item"><a class="nav-link" href="../guest-schedule-view/guest-schedule.html">Statistics</a></li>
+          <li class="nav-item"><a class="nav-link" href="registration-home.html">Registration</a></li>
+          <li class="nav-item"><a class="nav-link" href="rugby-merch.html">Merchandise</a></li>
+          <li class="nav-item"><a class="nav-link" href="guest-schedule.html">Statistics</a></li>
         </ul>
       </div>
       <span class="text-white ms-3">Welcome Member</span>
-      <a href="../guest-homepage-view/index.html" class="btn btn-outline-light ms-2">Sign Out</a>
+      <a href="index.html" class="btn btn-outline-light ms-2">Sign Out</a>
     </div>
   </nav>
 
