--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <a class="navbar-brand" href="../guest-homepage-view/index.html">UMD Club Rugby</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../Registration-Home/registration-home.html">Registration</a></li>
-          <li class="nav-item"><a class="nav-link" href="../rugbymerchviews/rugby-merch.html">Merchandise</a></li>
-          <li class="nav-item"><a class="nav-link" href="../guest-schedule-view/guest-schedule.html">Statistics</a></li>
+          <li class="nav-item"><a class="nav-link" href="registration-home.html">Registration</a></li>
+          <li class="nav-item"><a class="nav-link" href="rugby-merch.html">Merchandise</a></li>
+          <li class="nav-item"><a class="nav-link" href="guest-schedule.html">Statistics</a></li>
         </ul>
       </div>
       <span class="text-white ms-3">Welcome Guest</span>
-      <a href="../admin-member-login/login.html" class="btn btn-outline-light ms-2">Sign In</a>
+      <a href="login.html" class="btn btn-outline-light ms-2">Sign In</a>
     </div>
   </nav>
 
@@ -70,10 +70,10 @@
   <section class="container my-5">
     <div class="row justify-content-center text-center g-4">
       <div class="col-md-4">
-        <a href="../Registration-Home/registration-home.html" class="btn btn-danger btn-lg w-100">Join the Team</a>
+        <a href="registration-home.html" class="btn btn-danger btn-lg w-100">Join the Team</a>
       </div>
       <div class="col-md-4">
-        <a href="../guest-schedule-view/guest-schedule.html" class="btn btn-danger btn-lg w-100">Spring 2025 Schedule</a>
+        <a href="guest-schedule.html" class="btn btn-danger btn-lg w-100">Spring 2025 Schedule</a>
       </div>
     </div>
   </section>
