--- a/login.html
+++ b/login.html
@@ -63,15 +63,15 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="../guest-homepage-view/index.html">UMD Club Rugby</a>
+      <a class="navbar-brand" href="index.html">UMD Club Rugby</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="../Registration-Home/registration-home.html">Registration</a></li>
-          <li class="nav-item"><a class="nav-link" href="../rugbymerchviews/rugby-merch.html">Merchandise</a></li>
-          <li class="nav-item"><a class="nav-link" href="../guest-schedule-view/guest-schedule.html">Statistics</a></li>
+          <li class="nav-item"><a class="nav-link" href="registration-home.html">Registration</a></li>
+          <li class="nav-item"><a class="nav-link" href="rugby-merch.html">Merchandise</a></li>
+          <li class="nav-item"><a class="nav-link" href="guest-schedule.html">Statistics</a></li>
         </ul>
         <span class="text-white ms-3">Welcome Guest</span>
       </div>
@@ -107,8 +107,8 @@
 
       <button type="button" class="register btn btn-danger" onclick="window.location.href='../registration-step4/registration-step4.html'">Register</button>
 
-      <input type="button" class="login btn btn-primary mt-2" onclick="window.location.href='../pending/pending.html'"value="Member Login" />
-      <input type="button" class="login2 btn btn-secondary mt-2" onclick="window.location.href='../admin-registration-view-input/admin-reg-input.html'"value="Admin Login" />
+      <input type="button" class="login btn btn-primary mt-2" onclick="window.location.href='pending.html'"value="Member Login" />
+      <input type="button" class="login2 btn btn-secondary mt-2" onclick="window.location.href='admin-reg-input.html'"value="Admin Login" />
     </form>
   </div>
 
