--- a/pending.html
+++ b/pending.html
@@ -61,19 +61,19 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="../guest-homepage-view/index.html">UMD Club Rugby</a>
+      <a class="navbar-brand" href="index.html">UMD Club Rugby</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../Registration-Home/registration-home.html">Registration</a></li>
-          <li class="nav-item"><a class="nav-link" href="../rugbymerchviews/rugby-merch.html">Merchandise</a></li>
-          <li class="nav-item"><a class="nav-link" href="../guest-schedule-view/guest-schedule.html">Statistics</a></li>
+          <li class="nav-item"><a class="nav-link" href="registration-home.html">Registration</a></li>
+          <li class="nav-item"><a class="nav-link" href="rugby-merch.html">Merchandise</a></li>
+          <li class="nav-item"><a class="nav-link" href="guest-schedule.html">Statistics</a></li>
         </ul>
       </div>
       <span class="text-white ms-3">Welcome Member</span>
-      <a href="../guest-homepage-view/index.html" class="btn btn-outline-light ms-2">Sign Out</a>
+      <a href="index.html" class="btn btn-outline-light ms-2">Sign Out</a>
     </div>
   </nav>
 
