--- a/guest-schedule.html
+++ b/guest-schedule.html
@@ -149,7 +149,7 @@
         <div class="col-md-4">
           <div class="d-flex justify-content-center align-items-center">
             <div class="score-box me-2">28</div>
-            <img src="_200617131110-02-uva-reworked-logo-0616-10.png" class="team-logo" alt="Virginia">
+            <img src="download-30.png" class="team-logo" alt="Virginia">
             <h5 class="fw-bold ms-2">VIRGINIA</h5>
           </div>
         </div>
