--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
 
       <input type="password" id="password3" class="password3" placeholder="Enter password" />
 
-      <button type="button" class="register btn btn-danger" onclick="window.location.href='registration-step4.html'" value="Register" />
+      <button type="button" class="register btn btn-danger" onclick="window.location.href='registration-step4.html'">Register</button>
 
       <input type="button" class="login btn btn-primary mt-2" onclick="window.location.href='pending.html'"value="Member Login" />
       <input type="button" class="login2 btn btn-secondary mt-2" onclick="window.location.href='admin-reg-input.html'"value="Admin Login" />
