--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #E21833;">
     <div class="container">
-      <a class="navbar-brand" href="#">UMD Club Rugby</a>
+      <a class="navbar-brand" href="index.html">UMD Club Rugby</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="registration-home.html">Registration</a></li>
