--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <p class="lead">
           Welcome to UMD men’s Club Rugby – where strength, strategy, and teamwork define every match. Stay updated on games, gear up with exclusive merch, and join the squad.
           <br /><strong>#FEARTHETURTLE</strong>
+          <br/>
+            <strong>
+              <a href="https://www.instagram.com/terpsrugby/?hl=en";">Instagram</a> 
+                &nbsp; 
+              <a href="https://x.com/terpsrugby";">Twitter</a>
+            </strong>
         </p>
       </div>
     </div>
