--- a/admin-stat-input.html
+++ b/admin-stat-input.html
@@ -63,7 +63,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="admin-reg-input.html">Registration</a></li>
           <li class="nav-item"><a class="nav-link" href="rugby-merch.html">Merchandise</a></li>
-          <li class="nav-item"><a class="nav-link" href="guest-schedule.html">Statistics</a></li>
+          <li class="nav-item"><a class="nav-link" href="admin-stat-output.html">Statistics</a></li>
         </ul>
       </div>
       <span class="text-white ms-3">Welcome Admin</span>
