--- a/registration-step4.html
+++ b/registration-step4.html
@@ -118,7 +118,7 @@
         <div class="info-box">
           <p><strong>Send Your Request for approval By Clicking Below:</strong></p>
           <div class="text-center">
-            <button class="join-btn" onclick="window.location.href='pending.html'"">JOIN THE TEAM</button>
+            <button class="join-btn" onclick="window.location.href='registration-step4-conf.html'"">JOIN THE TEAM</button>
           </div>
         </div>
       </div>
