--- a/admin-stat-input.html
+++ b/admin-stat-input.html
@@ -84,10 +84,10 @@
           <textarea class="form-control comment-box" rows="3" placeholder="Input Here! Example: Name (Time Scored)"></textarea>
         </div>
         <div class="col-md-2 text-center">
-          <input type="number" placeholder="Input Score" class="score-input">
+          <input type="number" placeholder="Input Score" class="score-input" min="0" max="500">
         </div>
         <div class="col-md-4 text-center"> 
-          <input type="number" placeholder="Input Score" class="score-input">
+          <input type="number" placeholder="Input Score" class="score-input" min="0" max="500">
         </div>
         <div class="col-md-1 text-end">
           <div class="d-flex justify-content-end align-items-center mb-2">
@@ -111,10 +111,10 @@
           <textarea class="form-control comment-box" rows="3" placeholder="Input Here! Example: Name (Time Scored)"></textarea>
         </div>
         <div class="col-md-2 text-center">
-          <input type="number" placeholder="Input Score" class="score-input">
+          <input type="number" placeholder="Input Score" class="score-input" min="0" max="500">
         </div>
         <div class="col-md-4 text-center">
-          <input type="number" placeholder="Input Score" class="score-input">
+          <input type="number" placeholder="Input Score" class="score-input" min="0" max="500">
         </div>
         <div class="col-md-1 text-end">
           <div class="d-flex justify-content-end align-items-center mb-2">
@@ -138,10 +138,10 @@
           <textarea class="form-control comment-box" rows="3" placeholder="Input Here! Example: Name (Time Scored)"></textarea>
         </div>
         <div class="col-md-2 text-center">
-          <input type="number" placeholder="Input Score" class="score-input">
+          <input type="number" placeholder="Input Score" class="score-input" min="0" max="500">
         </div>
         <div class="col-md-4 text-center">
-          <input type="number" placeholder="Input Score" class="score-input">
+          <input type="number" placeholder="Input Score" class="score-input" min="0" max="500">
         </div>
         <div class="col-md-1 text-end">
           <div class="d-flex justify-content-end align-items-center mb-2">
@@ -165,10 +165,10 @@
           <textarea class="form-control comment-box" rows="3" placeholder="Input Here! Example: Name (Time Scored)"></textarea>
         </div>
         <div class="col-md-2 text-center">
-          <input type="number" placeholder="Input Score" class="score-input">
+          <input type="number" placeholder="Input Score" class="score-input" min="0" max="500">
         </div>
         <div class="col-md-4 text-center">
-          <input type="number" placeholder="Input Score" class="score-input">
+          <input type="number" placeholder="Input Score" class="score-input" min="0" max="500">
         </div>
         <div class="col-md-1 text-end">
           <div class="d-flex justify-content-end align-items-center mb-2">
