--- a/registration-home.html
+++ b/registration-home.html
@@ -98,11 +98,21 @@
     <div class="row">
       <div class="col-md-2 sidebar">
         <h5>HOW TO REGISTER:</h5>
-        <div class="step">STEP 1:<span>SIGN IN</span></div>
-        <div class="step">STEP 2:<span><u>IMLEAGUES</u></span></div>
-        <div class="step">STEP 3:<span><u>PAY</u></span></div>
-        <div class="step">STEP 4:<span>GET APPROVED</span></div>
-        <div class="step">STEP 5:<span>CHECK STATUS</span></div>
+        <a href="login.html">
+          <div class="step">STEP 1:<span>SIGN IN</span></div>
+        </a>
+        <a href="https://www.imleagues.com/spa/sport/72d12ba03fc94bf4955f0c559fbcaeb8/home">
+          <div class="step">STEP 2:<span><u>IMLEAGUEs</u></span></div>
+        </a>
+        <a href=https://www.paypal.com>
+          <div class="step">STEP 3:<span><u>PAY</u></span></div>
+        </a>
+        <a href="registration-step4.html">
+          <div class="step">STEP 4:<span>GET APPROVED</span></div>
+        </a>
+        <a href="pending.html">
+          <div class="step">STEP 5:<span>CHECK STATUS</span></div>
+        </a>
       </div>
 
       <div class="col-md-10 px-4">
