--- a/rugby-merch.html
+++ b/rugby-merch.html
@@ -78,7 +78,7 @@
       <img src="front-10.png" class="img-fluid" alt="Front Hoodie">
     </div>
     <div class="col-6 col-md-3 mb-4">
-      <img src="rugbyred-10.png" class="img-fluid" alt="Red Rugby Front">
+      <img src="https://rugbyred-10.png" class="img-fluid" alt="Red Rugby Front">
     </div>
   </div>
 </div>
