--- a/rugby-merch.html
+++ b/rugby-merch.html
@@ -64,7 +64,7 @@
       <p class="hero-subtext">Click the link below to be redirected to the official UMD Club Rugby Merchandise Website</p>
     </div>
     <div class="text-center mt-4">
-      <a href="rgpmj6-eb-myshopify.com" class="btn btn-danger px-4 py-2">Buy Merch</a>
+      <a href="https://rgpmj6-eb-myshopify.com" class="btn btn-danger px-4 py-2">Buy Merch</a>
     </div>
   </div>
   <div class="row justify-content-center mt-5">
@@ -78,7 +78,7 @@
       <img src="front-10.png" class="img-fluid" alt="Front Hoodie">
     </div>
     <div class="col-6 col-md-3 mb-4">
-      <img src="https://rugbyred-10.png" class="img-fluid" alt="Red Rugby Front">
+      <img src="rugbyred-10.png" class="img-fluid" alt="Red Rugby Front">
     </div>
   </div>
 </div>
