--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section class="container text-center my-5">
     <img src="images-10.png" class="img-fluid" alt="UMD Logo" style="max-height: 120px;" />
     <h1 class="mt-3">UMD Club Rugby</h1>
-    <h4>Registration Page</h4>
+    <h4>Home Page</h4>
   </section>
 
   <section class="container my-4">
