--- a/registration-step4.html
+++ b/registration-step4.html
@@ -128,7 +128,7 @@
         <div class="info-box">
           <p><strong>Send Your Request for approval By Clicking Below:</strong></p>
           <div class="text-center">
-            <button class="join-btn" onclick="window.location.href='registration-step4-conf'"">JOIN THE TEAM</button>
+            <button class="join-btn" onclick="window.location.href='registration-step4-conf'">JOIN THE TEAM</button>
           </div>
         </div>
       </div>
