--- a/rugby-merch.html
+++ b/rugby-merch.html
@@ -64,7 +64,7 @@
       <p class="hero-subtext">Click the link below to be redirected to the official UMD Club Rugby Merchandise Website</p>
     </div>
     <div class="text-center mt-4">
-      <a href="https://rgpmj6-eb-myshopify.com" class="btn btn-danger px-4 py-2">Buy Merch</a>
+      <a href="https://0hc9i0-av.myshopify.com/" class="btn btn-danger px-4 py-2">Buy Merch</a>
     </div>
   </div>
   <div class="row justify-content-center mt-5">
