--- a/login.html
+++ b/login.html
@@ -1,117 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Login | UMD Club Rugby</title>
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="vars.css" />
+<link rel="stylesheet" href="style.css" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+<style>
+a, button, input, select, h1, h2, h3, h4, h5, *, menu, ol, ul {
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+border: none;
+text-decoration: none;
+background: none;
+-webkit-font-smoothing: antialiased;
+}
 
-  <link rel="stylesheet" href="vars.css" />
-  <link rel="stylesheet" href="login.css" />
+.custom-navbar {
+background-color: #E21833;
+}
 
-  <style>
-    a,
-    button,
-    input,
-    select,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      border: none;
-      text-decoration: none;
-      background: none;
-      -webkit-font-smoothing: antialiased;
-    }
+.card {
+border: 1px solid #ccc;
+border-radius: 8px;
+padding: 20px;
+}
 
-    menu, ol, ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    .custom-navbar {
-      background-color: #E21833;
-    }
-
-    .login-page-1 {
-      padding: 40px;
-    }
-
-    form {
-      max-width: 500px;
-      margin: 0 auto;
-    }
-
-    form input, form button {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-    }
-  </style>
-
-  <title>Login | UMD Club Rugby</title>
+.form-control {
+margin-bottom: 15px;
+}
+</style>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">UMD Club Rugby</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="registration-home.html">Registration</a></li>
-          <li class="nav-item"><a class="nav-link" href="rugby-merch.html">Merchandise</a></li>
-          <li class="nav-item"><a class="nav-link" href="guest-schedule.html">Statistics</a></li>
-        </ul>
-        <span class="text-white ms-3">Welcome Guest</span>
-      </div>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+<div class="container">
+<a class="navbar-brand" href="#">UMD Club Rugby</a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+<ul class="navbar-nav">
+<li class="nav-item"><a class="nav-link" href="#">Registration</a></li>
+<li class="nav-item"><a class="nav-link" href="#">Merchandise</a></li>
+<li class="nav-item"><a class="nav-link" href="#">Statistics</a></li>
+</ul>
+<span class="text-white ms-3">Welcome Guest</span>
+</div>
+</div>
+</nav>
 
-  <div class="login-page-1">
-    <div class="text-center my-4">
-      <img src="images-10.png" alt="UMD Logo" class="img-fluid" style="max-height: 120px;" />
-      <h1 class="mt-3">UMD Club Rugby</h1>
-      <h4>Login Page</h4>
-    </div>
+<div class="container my-5">
+<div class="text-center mb-4">
+<img src="images-10.png" alt="UMD Logo" class="img-fluid" style="max-height: 100px;" />
+<h1 class="mt-3">UMD Club Rugby</h1>
+<h4>Login Page</h4>
+</div>
 
-    <div class="registration3">Register Here</div>
-    <div class="registered">Already Registered</div>
+<div class="row justify-content-center g-4">
+<div class="col-md-5">
+<div class="card">
+<h5 class="text-center mb-3">New Member Registration</h5>
+<form>
+<input type="text" class="form-control" placeholder="First Name">
+<input type="text" class="form-control" placeholder="Last Name">
+<input type="email" class="form-control" placeholder="Email">
+<input type="tel" class="form-control" placeholder="Phone Number">
+<input type="password" class="form-control" placeholder="Create Password">
+<input type="password" class="form-control" placeholder="Re-enter Password">
+<button type="button" class="btn btn-danger w-100" onclick="window.location.href='register.html'">Register</button>
+</form>
+</div>
+</div>
 
-    <form action="/action_page.php">
-      <input type="text" class="fname" placeholder="Enter First Name" />
+<div class="col-md-5">
+<div class="card">
+<h5 class="text-center mb-3">Existing Member Login</h5>
+<form action="/action_page.php">
+<input type="email" class="form-control" placeholder="Email">
+<input type="password" class="form-control" placeholder="Password">
+<input type="submit" class="btn btn-primary w-100 mb-2" value="Member Login">
+<input type="submit" class="btn btn-secondary w-100" value="Admin Login">
+</form>
+</div>
+</div>
+</div>
+</div>
 
-      <input type="text" id="lname" class="lname" placeholder="Enter Last Name" />
-
-      <input type="email" id="email" class="email" placeholder="Enter E-Mail" />
-
-      <input type="tel" id="phonenum" class="phonenum" placeholder="Enter Phone Number" />
-
-      <input type="password" id="password" class="password" placeholder="Create password" />
-
-      <input type="password" id="password2" class="password2" placeholder="Re-enter password" />
-
-      <input type="email" id="email2" class="email2" placeholder="Enter E-Mail" />
-
-      <input type="password" id="password3" class="password3" placeholder="Enter password" />
-
-      <button type="button" class="register btn btn-danger" onclick="window.location.href='registration-step4.html'">Register</button>
-
-      <input type="button" class="login btn btn-primary mt-2" onclick="window.location.href='pending.html'"value="Member Login" />
-      <input type="button" class="login2 btn btn-secondary mt-2" onclick="window.location.href='admin-reg-input.html'"value="Admin Login" />
-    </form>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
