--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="vars.css" />
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="login.css" />
 
 <style>
 a, button, input, select, h1, h2, h3, h4, h5, *, menu, ol, ul {
@@ -46,9 +46,9 @@ margin-bottom: 15px;
 </button>
 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 <ul class="navbar-nav">
-<li class="nav-item"><a class="nav-link" href="#">Registration</a></li>
-<li class="nav-item"><a class="nav-link" href="#">Merchandise</a></li>
-<li class="nav-item"><a class="nav-link" href="#">Statistics</a></li>
+          <li class="nav-item"><a class="nav-link" href="../Registration-Home/registration-home.html">Registration</a></li>
+          <li class="nav-item"><a class="nav-link" href="../rugbymerchviews/rugby-merch.html">Merchandise</a></li>
+          <li class="nav-item"><a class="nav-link" href="../guest-schedule-view/guest-schedule.html">Statistics</a></li>
 </ul>
 <span class="text-white ms-3">Welcome Guest</span>
 </div>
@@ -73,7 +73,7 @@ margin-bottom: 15px;
 <input type="tel" class="form-control" placeholder="Phone Number">
 <input type="password" class="form-control" placeholder="Create Password">
 <input type="password" class="form-control" placeholder="Re-enter Password">
-<button type="button" class="btn btn-danger w-100" onclick="window.location.href='register.html'">Register</button>
+<button type="button" class="btn btn-danger w-100" onclick="window.location.href='registration-step4.html'">Register</button>
 </form>
 </div>
 </div>
@@ -84,8 +84,8 @@ margin-bottom: 15px;
 <form action="/action_page.php">
 <input type="email" class="form-control" placeholder="Email">
 <input type="password" class="form-control" placeholder="Password">
-<input type="submit" class="btn btn-primary w-100 mb-2" value="Member Login">
-<input type="submit" class="btn btn-secondary w-100" value="Admin Login">
+<input type="submit" class="btn btn-primary w-100 mb-2" onclick="window.location.href='pending.html'"value="Member Login">
+<input type="submit" class="btn btn-secondary w-100" onclick="window.location.href='admin-reg-input.html'"value="Admin Login">
 </form>
 </div>
 </div>
