--- a/login.html
+++ b/login.html
@@ -84,8 +84,8 @@ margin-bottom: 15px;
 <form action="/action_page.php">
 <input type="email" class="form-control" placeholder="Email">
 <input type="password" class="form-control" placeholder="Password">
-<input type="submit" class="btn btn-primary w-100 mb-2" onclick="window.location.href='pending.html'"value="Member Login">
-<input type="submit" class="btn btn-secondary w-100" onclick="window.location.href='admin-reg-input.html'"value="Admin Login">
+<input type="button" class="btn btn-primary w-100 mb-2" onclick="window.location.href='pending.html'"value="Member Login">
+<input type="button" class="btn btn-secondary w-100" onclick="window.location.href='admin-reg-input.html'"value="Admin Login">
 </form>
 </div>
 </div>
