--- a/admin-stat-input.html
+++ b/admin-stat-input.html
@@ -172,7 +172,7 @@
         </div>
         <div class="col-md-1 text-end">
           <div class="d-flex justify-content-end align-items-center mb-2">
-            <img src="_200617131110-02-uva-reworked-logo-0616-10.png" class="team-logo" alt="Virginia">
+            <img src="download-30.png" class="team-logo" alt="Virginia">
             <strong class="fs-5 ms-2">Virginia</strong>
           </div>
         </div>
