--- a/login.html
+++ b/login.html
@@ -46,9 +46,9 @@ margin-bottom: 15px;
 </button>
 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="../Registration-Home/registration-home.html">Registration</a></li>
-          <li class="nav-item"><a class="nav-link" href="../rugbymerchviews/rugby-merch.html">Merchandise</a></li>
-          <li class="nav-item"><a class="nav-link" href="../guest-schedule-view/guest-schedule.html">Statistics</a></li>
+          <li class="nav-item"><a class="nav-link" href="registration-home.html">Registration</a></li>
+          <li class="nav-item"><a class="nav-link" href="rugby-merch.html">Merchandise</a></li>
+          <li class="nav-item"><a class="nav-link" href="guest-schedule.html">Statistics</a></li>
 </ul>
 <span class="text-white ms-3">Welcome Guest</span>
 </div>
