--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@ margin-bottom: 15px;
 <input type="tel" class="form-control" placeholder="Phone Number">
 <input type="password" class="form-control" placeholder="Create Password">
 <input type="password" class="form-control" placeholder="Re-enter Password">
-<button type="button" class="btn btn-danger w-100" onclick="window.location.href='registration-step4.html'">Register</button>
+<button type="button" class="btn btn-danger w-100" onclick="window.location.href='registration-home.html'">Register</button>
 </form>
 </div>
 </div>
